--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 mastery-quizzes/
 ruby-kickstart/
 makers-course/my-project-directory/E-A_Pair/
+makers-course/golden_square/test_drive_a_single_class_program/spec/spec_helper.rb
+makers-course/golden_square/test_drive_a_single_class_program/.rspec
+makers-course/golden_square/test_drive_a_single_class_program/Gemfile
+makers-course/golden_square/test_drive_a_single_class_program/Gemfile.lock
